[gd_scene load_steps=27 format=3 uid="uid://cp3jlic4qi076"]

[ext_resource type="Theme" uid="uid://btvhohyurcn0u" path="res://resources/theme/theme.tres" id="1_3dva8"]
[ext_resource type="Script" path="res://scenes/theme/game_view/data_section.gd" id="1_gsq0a"]
[ext_resource type="Texture2D" uid="uid://wdi7id6fbtjw" path="res://assets/theme/icons/play.svg" id="3_roefq"]
[ext_resource type="Texture2D" uid="uid://dta8m1y7ed5vf" path="res://assets/theme/icons/calendar.svg" id="4_gprg5"]
[ext_resource type="Script" path="res://addons/retrohub_theme_helper/ui/AccessibilityFocus.gd" id="5_8mxx3"]
[ext_resource type="Texture2D" uid="uid://ch8uglk4auwl8" path="res://assets/theme/icons/count.svg" id="5_af6f8"]
[ext_resource type="Texture2D" uid="uid://cgohvfgp74isp" path="res://assets/theme/icons/players.svg" id="6_gcr4f"]
[ext_resource type="Texture2D" uid="uid://cgkbrwyvcttb7" path="res://assets/theme/icons/star-unfilled-bar.svg" id="7_blmvy"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="7_u0kaw"]
[ext_resource type="Texture2D" uid="uid://dft2rslfadcw2" path="res://assets/theme/icons/star-filled-bar.svg" id="8_gvvv6"]
[ext_resource type="Texture2D" uid="uid://bkpb8incwdkr8" path="res://assets/theme/icons/star-filled.svg" id="9_sobwa"]
[ext_resource type="Texture2D" uid="uid://b384mq6py02a7" path="res://assets/theme/icons/star-unfilled.svg" id="10_svkcj"]
[ext_resource type="Texture2D" uid="uid://dim5mk7g4q043" path="res://addons/controller_icons/assets/key/q.png" id="12_4peac"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="12_byqss"]
[ext_resource type="Texture2D" uid="uid://b5kitqyik3m7s" path="res://assets/theme/icons/edit_game_data.png" id="12_q2hxs"]
[ext_resource type="Texture2D" uid="uid://ckirnuvl1aofi" path="res://assets/theme/icons/scrape_game_data.png" id="13_g6u71"]
[ext_resource type="Texture2D" uid="uid://xe4n818le3p8" path="res://addons/controller_icons/assets/key/e.png" id="14_xk7cp"]
[ext_resource type="PackedScene" uid="uid://mvr00r2pbjmw" path="res://scenes/theme/game_view/achievements/achievements.tscn" id="15_sb5h8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5yej"]
bg_color = Color(0.2, 0.235294, 0.341176, 0.858824)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgbpf"]
bg_color = Color(0.337255, 0.423529, 0.52549, 0.415686)
border_width_bottom = 2
border_color = Color(0.188235, 0.239216, 0.298039, 0.709804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvkmn"]
bg_color = Color(1, 0.560784, 0.27451, 1)
corner_radius_bottom_right = 25
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kak2k"]
bg_color = Color(1, 0.560784, 0.27451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.733333, 0.537255, 1)
corner_radius_bottom_right = 25
corner_detail = 10
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2clgt"]
bg_color = Color(1, 0.560784, 0.27451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.733333, 0.537255, 1)
corner_radius_bottom_right = 25
corner_detail = 10
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opfdl"]
bg_color = Color(1, 0.560784, 0.27451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.733333, 0.537255, 1)
corner_radius_bottom_right = 25
corner_detail = 10
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rcerr"]

[sub_resource type="LabelSettings" id="LabelSettings_jlgt7"]
font_size = 19

[node name="Data" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("1_3dva8")
script = ExtResource("1_gsq0a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b5yej")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="InfoBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel" type="PanelContainer" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bgbpf")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Play" type="Button" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../Favorite")
theme_override_colors/font_color = Color(0.466667, 0.34902, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.337255, 0.25098, 0.192157, 1)
theme_override_colors/font_hover_color = Color(0.466667, 0.34902, 0.266667, 1)
theme_override_colors/font_focus_color = Color(0.466667, 0.34902, 0.266667, 1)
theme_override_colors/icon_normal_color = Color(1, 0.831373, 0.709804, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.760784, 0.588235, 1)
theme_override_colors/icon_hover_color = Color(1, 0.831373, 0.709804, 1)
theme_override_colors/icon_focus_color = Color(1, 0.831373, 0.709804, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pvkmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_kak2k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2clgt")
theme_override_styles/focus = SubResource("StyleBoxFlat_opfdl")
text = "Play "
icon = ExtResource("3_roefq")
expand_icon = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer3/Play"]
script = ExtResource("5_8mxx3")

[node name="AgeRating" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Last played date"
texture = ExtResource("4_gprg5")
expand_mode = 1

[node name="PlayDate" type="Label" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Last played date"
mouse_filter = 1
text = "%s"
clip_text = true
text_overrun_behavior = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer2/PlayDate"]
script = ExtResource("5_8mxx3")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Total play cont"
texture = ExtResource("5_af6f8")
expand_mode = 1

[node name="PlayCount" type="Label" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Total play cont"
mouse_filter = 1
text = "%d"

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/VBoxContainer2/HBoxContainer/PlayCount"]
script = ExtResource("5_8mxx3")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_gcr4f")
expand_mode = 1

[node name="NumPlayers" type="Label" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "%s"

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer2/NumPlayers"]
script = ExtResource("5_8mxx3")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoBar/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rating: "

[node name="Rating" type="TextureProgressBar" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.65
nine_patch_stretch = true
texture_under = ExtResource("7_blmvy")
texture_progress = ExtResource("8_gvvv6")

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer/Rating"]
script = ExtResource("5_8mxx3")

[node name="Favorite" type="Button" parent="VBoxContainer/InfoBar/Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../HBoxContainer3/Play")
theme_type_variation = &"RoundButton"

[node name="StarFilled" type="TextureRect" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/Favorite"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_sobwa")
expand_mode = 1

[node name="StarUnfilled" type="TextureRect" parent="VBoxContainer/InfoBar/Panel/HBoxContainer/Favorite"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_svkcj")
expand_mode = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="ControllerTextureRect" type="TextureRect" parent="VBoxContainer/Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 15.0
offset_top = 2.0
offset_right = 45.0
offset_bottom = 32.0
texture = ExtResource("12_4peac")
expand_mode = 1
script = ExtResource("12_byqss")
path = "rh_left_shoulder"
max_width = 30

[node name="ControllerTextureRect2" type="TextureRect" parent="VBoxContainer/Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 2.0
offset_right = -15.0
offset_bottom = 32.0
grow_horizontal = 0
texture = ExtResource("14_xk7cp")
expand_mode = 1
script = ExtResource("12_byqss")
path = "rh_right_shoulder"
max_width = 30

[node name="InfoTab" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_rcerr")
tab_alignment = 1

[node name="Info" type="Control" parent="VBoxContainer/InfoTab"]
layout_mode = 2

[node name="Metadata" type="VBoxContainer" parent="VBoxContainer/InfoTab/Info"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoTab/Info/Metadata"]
layout_mode = 2

[node name="Developer" type="Label" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Developer: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer/Developer"]
script = ExtResource("5_8mxx3")

[node name="Publisher" type="Label" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Publisher: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer/Publisher"]
script = ExtResource("5_8mxx3")

[node name="Genres" type="Label" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Genre: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer/Genres"]
script = ExtResource("5_8mxx3")

[node name="ReleaseDate" type="Label" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Release date: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/Metadata/HBoxContainer/ReleaseDate"]
script = ExtResource("5_8mxx3")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InfoTab/Info/Metadata"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InfoTab/Info/Metadata"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/InfoTab/Info/Metadata/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("7_u0kaw")
allow_horizontal_scroll = false

[node name="Description" type="Label" parent="VBoxContainer/InfoTab/Info/Metadata/MarginContainer/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
text = "Game details"
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/Metadata/MarginContainer/SmoothScrollContainer/Description"]
script = ExtResource("5_8mxx3")

[node name="NoMetadata" type="VBoxContainer" parent="VBoxContainer/InfoTab/Info"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -134.0
offset_right = 250.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer/InfoTab/Info/NoMetadata"]
layout_mode = 2
text = "This game has no metadata to show"
horizontal_alignment = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/InfoTab/Info/NoMetadata/Label"]
script = ExtResource("5_8mxx3")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InfoTab/Info/NoMetadata"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InfoTab/Info/NoMetadata"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="EditMetadata" type="Button" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer"]
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../InfoBar/Panel/HBoxContainer/HBoxContainer3/Play")
text = "Edit this game metadata"
icon = ExtResource("12_q2hxs")
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "or"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrapeMetadata" type="Button" parent="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
text = "Scrape metadata automatically"
icon = ExtResource("13_g6u71")
icon_alignment = 2
expand_icon = true

[node name="Achievements" parent="VBoxContainer/InfoTab" instance=ExtResource("15_sb5h8")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="VBoxContainer/InfoBar/Panel/HBoxContainer/HBoxContainer3/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/InfoBar/Panel/HBoxContainer/Favorite" to="." method="_on_favorite_pressed"]
[connection signal="toggled" from="VBoxContainer/InfoBar/Panel/HBoxContainer/Favorite" to="." method="_on_favorite_toggled"]
[connection signal="tab_changed" from="VBoxContainer/InfoTab" to="." method="_on_info_tab_tab_changed"]
[connection signal="pressed" from="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer/EditMetadata" to="." method="_on_edit_metadata_pressed"]
[connection signal="pressed" from="VBoxContainer/InfoTab/Info/NoMetadata/VBoxContainer/ScrapeMetadata" to="." method="_on_scrape_metadata_pressed"]
